Favicon of collapsed tabs in the horizontal tree were not hidden. (regression) ( https://github.com/piroor/treestyletab/issues/233 )

--- a/content/treestyletab/treestyletab.css
+++ b/content/treestyletab/treestyletab.css
@@ -59,9 +59,7 @@
 	mask: url("res/tabEffects.svg#fadein-mask");
 }
 .tabbrowser-tabs[treestyletab-allow-subtree-collapse="true"][treestyletab-stack-collapsed-tabs="true"]
-  .tabbrowser-tab[treestyletab-collapsed-done="true"] .tab-image-middle > *,
-.tabbrowser-tabs[treestyletab-allow-subtree-collapse="true"][treestyletab-stack-collapsed-tabs="true"]
-  .tabbrowser-tab[treestyletab-collapsed-done="true"] .tab-close-button {
+  .tabbrowser-tab[treestyletab-collapsed-done="true"] .tab-content > * {
 	visibility: collapse;
 }
 
